# weather

./: .gitignore  README.md  pyproject.toml
src/Weather.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/weather/: main.py  network.py  server.py  utils.py
