[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "Weather"
version = "0.1.1"
description = "Python project that fetches weather information (internet required)"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
    { name = "yok1rai" }
]

keywords = [
    "weather",
    "forecast",
    "weather forecast"
]

dependencies = [
    "requests>=2.0",
    "flask",
    "dotenv"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/yok1rai/weather"
Repository = "https://github.com/yok1rai/weather"
Issues = "https://github.com/yok1rai/weather/issues"

[project.scripts]
weather = "weather.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
